Fixed some spacing

--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -44,3 +44,7 @@ of those sections to manage the look and feel of the site. */
     text-align: center;
     background: #eee;
 }
+
+.longer-section{
+	height:150%;
+}
